Add project info for publication

--- a/package.json
+++ b/package.json
@@ -1,27 +1,46 @@
 {
   "name": "marker",
-  "version": "1.0.0",
-  "description": "",
+  "version": "0.1.0",
+  "description": "A simple yet powerful command-line tool for managing directory navigation by setting bookmarks to frequently used folders",
   "main": "dist/marker.js",
+  "homepage": "https://github.com/thenovatasha/marker#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/thenovatasha/marker.git"
+  },
+  "bugs": {
+    "url": "https://github.com/thenovatasha/marker/issues"
+  },
   "scripts": {
     "build": "npx tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepublishOnly": "npm run build"
   },
   "bin": {
     "marker": "./dist/marker.js"
   },
-  "pkg": {
-    "targets": ["node18-linux-x64", "node18-macos-x64", "node18-win-x64"],
-    "outputPath": "binaries"
+  "keywords": [
+    "cli",
+    "directory",
+    "navigation",
+    "bookmark",
+    "mark",
+    "folder",
+    "filesystem",
+    "terminal",
+    "command-line",
+    "typescript"
+  ],
+  "author": {
+    "name": "Nova Tasha",
+    "email": "novatasha.dev@gmail.com",
+    "url": "https://github.com/thenovatasha"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
   "type": "module",
   "devDependencies": {
     "@tsconfig/node24": "^24.0.1",
     "@types/node": "^24.5.2",
-    "pkg": "^5.8.1",
     "typescript": "^5.9.2"
   },
   "dependencies": {
